[package]
authors = ["Aaron Trent <novacrazy@gmail.com>"]
name = "openalsoft-rs"
version = "0.1.0"

[dependencies]
lazy_static = "0.2.2"
serde = "0.8.21"
serde_derive = "0.8.21"

[dependencies.nalgebra]
path = "../nalgebra"

[dependencies.openalsoft-sys]
path = "../openalsoft-sys"

[dev-dependencies]
dsp-chain = "0.13.1"
pitch_calc = "0.11.0"
time_calc = "0.11.0"

[lib]
name = "openal"
